--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@radix-ui/react-icons": "^1.3.2",
     "@radix-ui/react-menubar": "^1.1.14",
     "@radix-ui/react-slot": "^1.2.2",
+    "@radix-ui/react-toast": "^1.2.13",
     "bcrypt": "^5.1.1",
     "better-auth": "^1.2.7",
     "class-variance-authority": "^0.7.1",
